removed site.baseurl references

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="section--footer">
   <div class="container container--content">
     <div>
-      Hand crafted by <a href="{{ site.baseurl }}about/">Yaniv Leviathan</a>
+      Hand crafted by <a href="/about/">Yaniv Leviathan</a>
     </div>
     <ul class="socialAccountList">
       <li><a href="http://facebook.com/{{ site.author.facebook }}" class="socialAccount socialAccount--facebook" target="_blank"></a></li>
