--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,5 @@
 <head>
   <link href="http://gmpg.org/xfn/11" rel="profile">
-  <link type="text/plain" rel="author" href="{{ site.url }}/humans.txt" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
@@ -14,14 +13,14 @@
     <meta name="robots" content="{{ page.robots }}">
   {% endif %}
 
-  <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.url }}">
+  <link rel="canonical" href="{{ page.url | replace:'index.html','' }}">
 
   {% if page.next.url %}
-    <link rel="next" href="{{ page.next.url | replace:'index.html','' | prepend: site.url }}" title="{{ page.next.title }}">
+    <link rel="next" href="{{ page.next.url | replace:'index.html','' }}" title="{{ page.next.title }}">
   {% endif %}
 
   {% if page.previous.url %}
-    <link rel="prev" href="{{ page.previous.url | replace:'index.html','' | prepend: site.url }}" title="{{ page.previous.title }}">
+    <link rel="prev" href="{{ page.previous.url | replace:'index.html','' }}" title="{{ page.previous.title }}">
   {% endif %}
 
   <!-- Twitter card -->
@@ -30,14 +29,14 @@
   <meta name="twitter:creator" content="@{{ site.author.twitter }}">
   <meta name="twitter:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.name }}{% endif %}">
   <meta name="twitter:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
-  <meta name="twitter:image" content="{% if page.image.feature %}{{ page.image.feature | prepend: site.baseurl_featured_img | prepend: site.url }}{% else %}{{ site.icon | prepend: site.baseurl | prepend: site.url }}{% endif %}">
-  <meta name="twitter:url" content="{{ page.url | replace:'index.html','' | prepend: site.url }}">
+  <meta name="twitter:image" content="{% if page.image.feature %}{{ page.image.feature | prepend: "/assets/images/hero/" }}{% else %}{{ site.icon }}{% endif %}">
+  <meta name="twitter:url" content="{{ page.url | replace:'index.html','' }}">
 
   <!-- Open graph -->
   <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.name }}{% endif %}">
   <meta property="og:type" content="{% if page.date %}article{% else %}website{% endif %}">
-  <meta property="og:url" content="{{ page.url | replace:'index.html','' | prepend: site.url }}">
-  <meta property="og:image" content="{% if page.image.feature %}{{ page.image.feature | prepend: site.baseurl_featured_img | prepend: site.url }}{% else %}{{ site.icon | prepend: site.baseurl | prepend: site.url }}{% endif %}">
+  <meta property="og:url" content="{{ page.url | replace:'index.html','' }}">
+  <meta property="og:image" content="{% if page.image.feature %}{{ page.image.feature | prepend: "/assets/images/hero/" }}{% else %}{{ site.icon }}{% endif %}">
   <meta property="og:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
   <meta property="og:site_name" content="{{ site.name }}">
   <meta property="og:locale" content="{{ site.locale }}">
@@ -47,7 +46,7 @@
     <meta property="article:published_time" content="{{ page.date | date_to_xmlschema }}">
     <meta property="article:author" content="https://www.facebook.com/{{ site.author.facebook }}">
     {% for post in site.related_posts limit:3 %}
-      <meta property="og:see_also" content="{{ post.url | replace:'index.html','' | prepend: site.url }}">
+      <meta property="og:see_also" content="{{ post.url | replace:'index.html','' }}">
     {% endfor %}
   {% endif %}
 
@@ -75,11 +74,11 @@
   </title>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="{{ site.baseurl }}assets/css/main.css">
+  <link rel="stylesheet" href="/assets/css/main.css">
 
   {% if page.syntaxHighlighter %}
-    <link rel="stylesheet" href="{{ site.baseurl }}assets/css/prism-okaidia.css">
-    <link rel="stylesheet" href="{{ site.baseurl }}assets/css/prism-line-numbers.css">
+    <link rel="stylesheet" href="/assets/css/prism-okaidia.css">
+    <link rel="stylesheet" href="/assets/css/prism-line-numbers.css">
   {% endif %}
 
   <!-- Fonts -->
@@ -88,8 +87,8 @@
   <link href='http://fonts.googleapis.com/css?family=PT+Sans:700' rel='stylesheet' type='text/css'>
 
   <!-- Icons -->
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}assets/apple-touch-icon-144-precomposed.png">
-  <link rel="shortcut icon" href="{{ site.baseurl }}assets/images/favicon.ico">
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/assets/apple-touch-icon-144-precomposed.png">
+  <link rel="shortcut icon" href="/assets/images/favicon.ico">
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/feed.xml">
