--- a/_includes/sidebar-nav.html
+++ b/_includes/sidebar-nav.html
@@ -1,5 +1,5 @@
 <nav role="navigation" class="sidebar sidebar--right">
-  <a href="{{site.baseurl}}" class="textLogo textLogo--white textLogo--sidebar">{{ site.name }}</a>
+  <a href="/" class="textLogo textLogo--white textLogo--sidebar">{{ site.name }}</a>
   <ul class="sidebar-recentPosts">
     {% for post in site.posts offset:0 limit:10 %}
       {% if post.title == page.title %}
@@ -8,7 +8,7 @@
       <li>
         {% if post.image.feature %}
           <a href="{{ post.url }}" class="sidebar-recentPosts-image-wrapper">
-            <img src="{{ post.image.feature | prepend: site.baseurl_featured_thumbnail }}" style="" alt="">
+            <img src="{{ post.image.feature | prepend: "/assets/images/thumbnail/" }}" style="" alt="">
           </a>
         {% endif %}
         <a href="{{ post.url }}">{{ post.title }}</a>
