--- a/_includes/footer-scripts.html
+++ b/_includes/footer-scripts.html
@@ -49,3 +49,12 @@
     $('.modal-toggle-group').toggleClass('active', $(document).scrollTop() >= 300);
   });
 </script>
+<script type="text/x-mathjax-config">
+MathJax.Hub.Config({
+  tex2jax: {
+    inlineMath: [['$','$'], ['\\(','\\)']],
+    processEscapes: true
+  }
+});
+</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
