--- a/_includes/head.html
+++ b/_includes/head.html
@@ -59,8 +59,7 @@
   <link rel="stylesheet" href="/assets/css/main.css">
 
   {% if page.syntaxHighlighter %}
-    <link rel="stylesheet" href="/assets/css/prism-okaidia.css">
-    <link rel="stylesheet" href="/assets/css/prism-line-numbers.css">
+    <link rel="stylesheet" href="/assets/css/prism.css">
   {% endif %}
 
   <!-- Fonts -->
