--- a/_includes/image.html
+++ b/_includes/image.html
@@ -1,2 +1,2 @@
 <div class="img img--fullContainer img--14xLeading" 
-     style="background-image: url({{ include.url | relative_url }});"></div>
+     style="background-image: url({{ include.url | relative_url }}); background-size: contain;"></div>
