--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -36,6 +36,7 @@ layout: default
             </li>
             <li class="postMeta-tags">
               {%if page.categories contains "Puzzle" %}<span>&#129513;</span>{% endif %}
+              {%if page.categories contains "WIP" %}<span>&#128679;</span>{% endif %}
               {{ page.categories }}
             </li>
           </ul>
