--- a/_scss/_images.scss
+++ b/_scss/_images.scss
@@ -60,3 +60,19 @@
 .img--16xLeading {
   height: 16*$leading;
 }
+
+.img--17xLeading {
+  height: 17*$leading;
+}
+
+.img--18xLeading {
+  height: 18*$leading;
+}
+
+.img--19xLeading {
+  height: 19*$leading;
+}
+
+.img--20xLeading {
+  height: 20*$leading;
+}
