--- a/_includes/image.html
+++ b/_includes/image.html
@@ -1,2 +1,6 @@
-<div class="img img--fullContainer img--14xLeading" 
-     style="background-image: url({{ include.url | relative_url }}); background-size: contain;"></div>
+{::nomarkdown}
+<a href="{{ include.url | relative_url }}">
+  <div class="img img--fullContainer img--14xLeading"
+    style="background-image: url({{ include.url | relative_url }}); background-size: contain;"></div>
+</a>
+{:/nomarkdown}
