--- a/_includes/image.html
+++ b/_includes/image.html
@@ -1,6 +1,6 @@
 {::nomarkdown}
 <a href="{{ include.url | relative_url }}">
-  <div class="img img--fullContainer img--14xLeading"
+  <div class="img img--fullContainer img--{{include.height | default: 14}}xLeading"
     style="background-image: url({{ include.url | relative_url }}); background-size: contain;"></div>
 </a>
 {:/nomarkdown}
