--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,41 +7,43 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
   <!-- Optimized for search engines -->
-  <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+  <meta name="description"
+    content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
   {% if page.robots %}
-    <meta name="robots" content="{{ page.robots }}">
+  <meta name="robots" content="{{ page.robots }}">
   {% endif %}
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' }}">
 
   {% if page.next.url %}
-    <link rel="next" href="{{ page.next.url | replace:'index.html','' }}" title="{{ page.next.title }}">
+  <link rel="next" href="{{ page.next.url | replace:'index.html','' }}" title="{{ page.next.title }}">
   {% endif %}
 
   {% if page.previous.url %}
-    <link rel="prev" href="{{ page.previous.url | replace:'index.html','' }}" title="{{ page.previous.title }}">
+  <link rel="prev" href="{{ page.previous.url | replace:'index.html','' }}" title="{{ page.previous.title }}">
   {% endif %}
 
   {% if page.date %}
-    <meta property="article:modified_time" content="{% if page.last_modified_at %}{{ page.last_modified_at | date_to_xmlschema }}{% else %}{{ page.date | date_to_xmlschema }}{% endif %}">
-    <meta property="article:published_time" content="{{ page.date | date_to_xmlschema }}">
-    <meta property="article:author" content="https://www.facebook.com/{{ site.author.facebook }}">
-    {% for post in site.related_posts limit:3 %}
-      <meta property="og:see_also" content="{{ post.url | replace:'index.html','' }}">
-    {% endfor %}
+  <meta property="article:modified_time"
+    content="{% if page.last_modified_at %}{{ page.last_modified_at | date_to_xmlschema }}{% else %}{{ page.date | date_to_xmlschema }}{% endif %}">
+  <meta property="article:published_time" content="{{ page.date | date_to_xmlschema }}">
+  <meta property="article:author" content="https://www.facebook.com/{{ site.author.facebook }}">
+  {% for post in site.related_posts limit:3 %}
+  <meta property="og:see_also" content="{{ post.url | replace:'index.html','' }}">
+  {% endfor %}
   {% endif %}
 
   {% if page.categories %}
-    {% for category in page.categories limit:1 %}
-    <meta property="article:section" content="{{ category }}">
-    {% endfor %}
+  {% for category in page.categories limit:1 %}
+  <meta property="article:section" content="{{ category }}">
+  {% endfor %}
   {% endif %}
 
   {% if page.tags %}
-    {% for tag in page.tags %}
-    <meta property="article:tag" content="{{ tag }}">
-    {% endfor %}
+  {% for tag in page.tags %}
+  <meta property="article:tag" content="{{ tag }}">
+  {% endfor %}
   {% endif %}
 
   <meta property="fb:admins" content="{{ site.fb_admins }}">
@@ -49,9 +51,9 @@
 
   <title>
     {% if page.title == "Home" %}
-      {{ site.title }} &middot; {{ site.tagline }}
+    {{ site.title }} &middot; {{ site.tagline }}
     {% else %}
-      {{ page.title }} &middot; {{ site.title }}
+    {{ page.title }} &middot; {{ site.title }}
     {% endif %}
   </title>
 
@@ -59,7 +61,7 @@
   <link rel="stylesheet" href="/assets/css/main.css">
 
   {% if page.syntaxHighlighter %}
-    <link rel="stylesheet" href="/assets/css/prism.css">
+  <link rel="stylesheet" href="/assets/css/prism-vs.css">
   {% endif %}
 
   <!-- Fonts -->
@@ -92,5 +94,6 @@
       }
     });
     </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>  
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML"
+    type="text/javascript"></script>
 </head>
