--- a/_includes/sidebar-nav.html
+++ b/_includes/sidebar-nav.html
@@ -1,20 +1,23 @@
 <nav role="navigation" class="sidebar sidebar--right">
   <a href="/" class="textLogo textLogo--white textLogo--sidebar">{{ site.name }}</a>
   <ul class="sidebar-recentPosts">
-    {% for post in site.posts offset:0 limit:10 %}
-      {% if post.title == page.title %}
-        <!-- exclude current post -->
-      {% else %}
-      <li>
-        {% if post.image.feature %}
-          <a href="{{ post.url }}" class="sidebar-recentPosts-image-wrapper">
-            <img src="{{ post.image.feature | prepend: "/assets/images/thumbnail/" }}" style="" alt="">
-          </a>
-        {% endif %}
-        <a href="{{ post.url }}">{{ post.title }}</a>
-        <div class="postMeta">{{ post.date | date_to_string }}</div>
-      </li>
+    <h2 style="color:#ddd;">{{page.categories}}</h2>
+    {% for post in site.posts offset:0 limit:100 %}
+    {% if post.title == page.title %}
+    <!-- exclude current post -->
+    {% else %}
+    {% if post.categories == page.categories %}
+    <li>
+      {% if post.image.feature %}
+      <a href="{{ post.url }}" class="sidebar-recentPosts-image-wrapper">
+        <img src="{{ post.image.feature | prepend: "/assets/images/thumbnail/" }}" style="" alt="">
+      </a>
       {% endif %}
+      <a href="{{ post.url }}">{{ post.title }}</a>
+      <div class="postMeta">{{ post.date | date_to_string }}</div>
+    </li>
+    {% endif %}
+    {% endif %}
     {% endfor %}
   </ul>
 </nav>
