--- a/_includes/sidebar-nav.html
+++ b/_includes/sidebar-nav.html
@@ -1,7 +1,7 @@
 <nav role="navigation" class="sidebar sidebar--right">
   <a href="/" class="textLogo textLogo--white textLogo--sidebar">{{ site.name }}</a>
-  <ul class="sidebar-recentPosts">
-    <h2 style="color:#ddd;">{{page.categories}}</h2>
+  <ul class="sidebar-recentPosts" style="margin-top:0;">
+    <h2 style="color:#ddd; margin-top: 0; margin-bottom: 1rem;">{{page.categories}}</h2>
     {% for post in site.posts offset:0 limit:100 %}
     {% if post.title == page.title %}
     <!-- exclude current post -->
