--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -45,11 +45,13 @@ layout: default
     </div>
   </section>
   <section class="section--last">
+    {% if content.size > 2000 %}
+    <div class="container">
+    {%else%}
     <div class="container container--content">
+    {%endif%}
       <div class="content-body">
-
         {{ content }}
-
       </div>
     </div>
     <hr class="u-clearHr" />
