--- a/_scss/_images.scss
+++ b/_scss/_images.scss
@@ -76,3 +76,69 @@
 .img--20xLeading {
   height: 20*$leading;
 }
+
+@media (width <= 600px) {
+  .img--5xLeading {
+    height: 5*$leading / 2;
+  }
+  
+  .img--6xLeading {
+    height: 6*$leading / 2;
+  }
+  
+  .img--7xLeading {
+    height: 7*$leading / 2;
+  }
+  
+  .img--8xLeading {
+    height: 8*$leading / 2;
+  }
+  
+  .img--9xLeading {
+    height: 9*$leading / 2;
+  }
+  
+  .img--10xLeading {
+    height: 10*$leading / 2;
+  }
+  
+  .img--11xLeading {
+    height: 11*$leading / 2;
+  }
+  
+  .img--12xLeading {
+    height: 12*$leading / 2;
+  }
+  
+  .img--13xLeading {
+    height: 13*$leading / 2;
+  }
+  
+  .img--14xLeading {
+    height: 14*$leading / 2;
+  }
+  
+  .img--15xLeading {
+    height: 15*$leading / 2;
+  }
+  
+  .img--16xLeading {
+    height: 16*$leading / 2;
+  }
+  
+  .img--17xLeading {
+    height: 17*$leading / 2;
+  }
+  
+  .img--18xLeading {
+    height: 18*$leading / 2;
+  }
+  
+  .img--19xLeading {
+    height: 19*$leading / 2;
+  }
+  
+  .img--20xLeading {
+    height: 20*$leading / 2;
+  }
+}
