--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -144,9 +144,9 @@ select {
 }
 
 button,
-html input[type=button],
-input[type=reset],
-input[type=submit] {
+html input[type="button"],
+input[type="reset"],
+input[type="submit"] {
   -webkit-appearance: button;
   cursor: pointer;
 }
@@ -166,26 +166,26 @@ input {
   line-height: normal;
 }
 
-input[type=checkbox],
-input[type=radio] {
+input[type="checkbox"],
+input[type="radio"] {
   box-sizing: border-box;
   padding: 0;
 }
 
-input[type=number]::-webkit-inner-spin-button,
-input[type=number]::-webkit-outer-spin-button {
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
   height: auto;
 }
 
-input[type=search] {
+input[type="search"] {
   -webkit-appearance: textfield;
   -moz-box-sizing: content-box;
   -webkit-box-sizing: content-box;
   box-sizing: content-box;
 }
 
-input[type=search]::-webkit-search-cancel-button,
-input[type=search]::-webkit-search-decoration {
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
@@ -244,7 +244,7 @@ html {
 /* Copy & Lists */
 p {
   line-height: 1.5rem;
-  letter-spacing: 0.01rem;
+  letter-spacing: .01rem;
   margin-top: 1.5rem;
   margin-bottom: 0;
 }
@@ -285,7 +285,7 @@ blockquote {
   }
 }
 blockquote.u--startsWithDoubleQuote {
-  text-indent: -0.4em;
+  text-indent: -0.40em;
 }
 blockquote.largeQuote {
   line-height: 1.4;
@@ -491,6 +491,71 @@ hr {
   height: 30rem;
 }
 
+@media (width <= 600px) {
+  .img--5xLeading {
+    height: 3.75rem;
+  }
+
+  .img--6xLeading {
+    height: 4.5rem;
+  }
+
+  .img--7xLeading {
+    height: 5.25rem;
+  }
+
+  .img--8xLeading {
+    height: 6rem;
+  }
+
+  .img--9xLeading {
+    height: 6.75rem;
+  }
+
+  .img--10xLeading {
+    height: 7.5rem;
+  }
+
+  .img--11xLeading {
+    height: 8.25rem;
+  }
+
+  .img--12xLeading {
+    height: 9rem;
+  }
+
+  .img--13xLeading {
+    height: 9.75rem;
+  }
+
+  .img--14xLeading {
+    height: 10.5rem;
+  }
+
+  .img--15xLeading {
+    height: 11.25rem;
+  }
+
+  .img--16xLeading {
+    height: 12rem;
+  }
+
+  .img--17xLeading {
+    height: 12.75rem;
+  }
+
+  .img--18xLeading {
+    height: 13.5rem;
+  }
+
+  .img--19xLeading {
+    height: 14.25rem;
+  }
+
+  .img--20xLeading {
+    height: 15rem;
+  }
+}
 html,
 body {
   overflow-x: hidden;
@@ -855,156 +920,207 @@ body {
   .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
     float: left;
   }
+
   .col-sm-1 {
     width: 8.3333333333%;
   }
+
   .col-sm-2 {
     width: 16.6666666667%;
   }
+
   .col-sm-3 {
     width: 25%;
   }
+
   .col-sm-4 {
     width: 33.3333333333%;
   }
+
   .col-sm-5 {
     width: 41.6666666667%;
   }
+
   .col-sm-6 {
     width: 50%;
   }
+
   .col-sm-7 {
     width: 58.3333333333%;
   }
+
   .col-sm-8 {
     width: 66.6666666667%;
   }
+
   .col-sm-9 {
     width: 75%;
   }
+
   .col-sm-10 {
     width: 83.3333333333%;
   }
+
   .col-sm-11 {
     width: 91.6666666667%;
   }
+
   .col-sm-12 {
     width: 100%;
   }
+
   .col-sm-pull-0 {
     right: auto;
   }
+
   .col-sm-pull-1 {
     right: 8.3333333333%;
   }
+
   .col-sm-pull-2 {
     right: 16.6666666667%;
   }
+
   .col-sm-pull-3 {
     right: 25%;
   }
+
   .col-sm-pull-4 {
     right: 33.3333333333%;
   }
+
   .col-sm-pull-5 {
     right: 41.6666666667%;
   }
+
   .col-sm-pull-6 {
     right: 50%;
   }
+
   .col-sm-pull-7 {
     right: 58.3333333333%;
   }
+
   .col-sm-pull-8 {
     right: 66.6666666667%;
   }
+
   .col-sm-pull-9 {
     right: 75%;
   }
+
   .col-sm-pull-10 {
     right: 83.3333333333%;
   }
+
   .col-sm-pull-11 {
     right: 91.6666666667%;
   }
+
   .col-sm-pull-12 {
     right: 100%;
   }
+
   .col-sm-push-0 {
     left: auto;
   }
+
   .col-sm-push-1 {
     left: 8.3333333333%;
   }
+
   .col-sm-push-2 {
     left: 16.6666666667%;
   }
+
   .col-sm-push-3 {
     left: 25%;
   }
+
   .col-sm-push-4 {
     left: 33.3333333333%;
   }
+
   .col-sm-push-5 {
     left: 41.6666666667%;
   }
+
   .col-sm-push-6 {
     left: 50%;
   }
+
   .col-sm-push-7 {
     left: 58.3333333333%;
   }
+
   .col-sm-push-8 {
     left: 66.6666666667%;
   }
+
   .col-sm-push-9 {
     left: 75%;
   }
+
   .col-sm-push-10 {
     left: 83.3333333333%;
   }
+
   .col-sm-push-11 {
     left: 91.6666666667%;
   }
+
   .col-sm-push-12 {
     left: 100%;
   }
+
   .col-sm-offset-0 {
     margin-left: 0%;
   }
+
   .col-sm-offset-1 {
     margin-left: 8.3333333333%;
   }
+
   .col-sm-offset-2 {
     margin-left: 16.6666666667%;
   }
+
   .col-sm-offset-3 {
     margin-left: 25%;
   }
+
   .col-sm-offset-4 {
     margin-left: 33.3333333333%;
   }
+
   .col-sm-offset-5 {
     margin-left: 41.6666666667%;
   }
+
   .col-sm-offset-6 {
     margin-left: 50%;
   }
+
   .col-sm-offset-7 {
     margin-left: 58.3333333333%;
   }
+
   .col-sm-offset-8 {
     margin-left: 66.6666666667%;
   }
+
   .col-sm-offset-9 {
     margin-left: 75%;
   }
+
   .col-sm-offset-10 {
     margin-left: 83.3333333333%;
   }
+
   .col-sm-offset-11 {
     margin-left: 91.6666666667%;
   }
+
   .col-sm-offset-12 {
     margin-left: 100%;
   }
@@ -1013,156 +1129,207 @@ body {
   .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     float: left;
   }
+
   .col-md-1 {
     width: 8.3333333333%;
   }
+
   .col-md-2 {
     width: 16.6666666667%;
   }
+
   .col-md-3 {
     width: 25%;
   }
+
   .col-md-4 {
     width: 33.3333333333%;
   }
+
   .col-md-5 {
     width: 41.6666666667%;
   }
+
   .col-md-6 {
     width: 50%;
   }
+
   .col-md-7 {
     width: 58.3333333333%;
   }
+
   .col-md-8 {
     width: 66.6666666667%;
   }
+
   .col-md-9 {
     width: 75%;
   }
+
   .col-md-10 {
     width: 83.3333333333%;
   }
+
   .col-md-11 {
     width: 91.6666666667%;
   }
+
   .col-md-12 {
     width: 100%;
   }
+
   .col-md-pull-0 {
     right: auto;
   }
+
   .col-md-pull-1 {
     right: 8.3333333333%;
   }
+
   .col-md-pull-2 {
     right: 16.6666666667%;
   }
+
   .col-md-pull-3 {
     right: 25%;
   }
+
   .col-md-pull-4 {
     right: 33.3333333333%;
   }
+
   .col-md-pull-5 {
     right: 41.6666666667%;
   }
+
   .col-md-pull-6 {
     right: 50%;
   }
+
   .col-md-pull-7 {
     right: 58.3333333333%;
   }
+
   .col-md-pull-8 {
     right: 66.6666666667%;
   }
+
   .col-md-pull-9 {
     right: 75%;
   }
+
   .col-md-pull-10 {
     right: 83.3333333333%;
   }
+
   .col-md-pull-11 {
     right: 91.6666666667%;
   }
+
   .col-md-pull-12 {
     right: 100%;
   }
+
   .col-md-push-0 {
     left: auto;
   }
+
   .col-md-push-1 {
     left: 8.3333333333%;
   }
+
   .col-md-push-2 {
     left: 16.6666666667%;
   }
+
   .col-md-push-3 {
     left: 25%;
   }
+
   .col-md-push-4 {
     left: 33.3333333333%;
   }
+
   .col-md-push-5 {
     left: 41.6666666667%;
   }
+
   .col-md-push-6 {
     left: 50%;
   }
+
   .col-md-push-7 {
     left: 58.3333333333%;
   }
+
   .col-md-push-8 {
     left: 66.6666666667%;
   }
+
   .col-md-push-9 {
     left: 75%;
   }
+
   .col-md-push-10 {
     left: 83.3333333333%;
   }
+
   .col-md-push-11 {
     left: 91.6666666667%;
   }
+
   .col-md-push-12 {
     left: 100%;
   }
+
   .col-md-offset-0 {
     margin-left: 0%;
   }
+
   .col-md-offset-1 {
     margin-left: 8.3333333333%;
   }
+
   .col-md-offset-2 {
     margin-left: 16.6666666667%;
   }
+
   .col-md-offset-3 {
     margin-left: 25%;
   }
+
   .col-md-offset-4 {
     margin-left: 33.3333333333%;
   }
+
   .col-md-offset-5 {
     margin-left: 41.6666666667%;
   }
+
   .col-md-offset-6 {
     margin-left: 50%;
   }
+
   .col-md-offset-7 {
     margin-left: 58.3333333333%;
   }
+
   .col-md-offset-8 {
     margin-left: 66.6666666667%;
   }
+
   .col-md-offset-9 {
     margin-left: 75%;
   }
+
   .col-md-offset-10 {
     margin-left: 83.3333333333%;
   }
+
   .col-md-offset-11 {
     margin-left: 91.6666666667%;
   }
+
   .col-md-offset-12 {
     margin-left: 100%;
   }
@@ -1171,156 +1338,207 @@ body {
   .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
     float: left;
   }
+
   .col-lg-1 {
     width: 8.3333333333%;
   }
+
   .col-lg-2 {
     width: 16.6666666667%;
   }
+
   .col-lg-3 {
     width: 25%;
   }
+
   .col-lg-4 {
     width: 33.3333333333%;
   }
+
   .col-lg-5 {
     width: 41.6666666667%;
   }
+
   .col-lg-6 {
     width: 50%;
   }
+
   .col-lg-7 {
     width: 58.3333333333%;
   }
+
   .col-lg-8 {
     width: 66.6666666667%;
   }
+
   .col-lg-9 {
     width: 75%;
   }
+
   .col-lg-10 {
     width: 83.3333333333%;
   }
+
   .col-lg-11 {
     width: 91.6666666667%;
   }
+
   .col-lg-12 {
     width: 100%;
   }
+
   .col-lg-pull-0 {
     right: auto;
   }
+
   .col-lg-pull-1 {
     right: 8.3333333333%;
   }
+
   .col-lg-pull-2 {
     right: 16.6666666667%;
   }
+
   .col-lg-pull-3 {
     right: 25%;
   }
+
   .col-lg-pull-4 {
     right: 33.3333333333%;
   }
+
   .col-lg-pull-5 {
     right: 41.6666666667%;
   }
+
   .col-lg-pull-6 {
     right: 50%;
   }
+
   .col-lg-pull-7 {
     right: 58.3333333333%;
   }
+
   .col-lg-pull-8 {
     right: 66.6666666667%;
   }
+
   .col-lg-pull-9 {
     right: 75%;
   }
+
   .col-lg-pull-10 {
     right: 83.3333333333%;
   }
+
   .col-lg-pull-11 {
     right: 91.6666666667%;
   }
+
   .col-lg-pull-12 {
     right: 100%;
   }
+
   .col-lg-push-0 {
     left: auto;
   }
+
   .col-lg-push-1 {
     left: 8.3333333333%;
   }
+
   .col-lg-push-2 {
     left: 16.6666666667%;
   }
+
   .col-lg-push-3 {
     left: 25%;
   }
+
   .col-lg-push-4 {
     left: 33.3333333333%;
   }
+
   .col-lg-push-5 {
     left: 41.6666666667%;
   }
+
   .col-lg-push-6 {
     left: 50%;
   }
+
   .col-lg-push-7 {
     left: 58.3333333333%;
   }
+
   .col-lg-push-8 {
     left: 66.6666666667%;
   }
+
   .col-lg-push-9 {
     left: 75%;
   }
+
   .col-lg-push-10 {
     left: 83.3333333333%;
   }
+
   .col-lg-push-11 {
     left: 91.6666666667%;
   }
+
   .col-lg-push-12 {
     left: 100%;
   }
+
   .col-lg-offset-0 {
     margin-left: 0%;
   }
+
   .col-lg-offset-1 {
     margin-left: 8.3333333333%;
   }
+
   .col-lg-offset-2 {
     margin-left: 16.6666666667%;
   }
+
   .col-lg-offset-3 {
     margin-left: 25%;
   }
+
   .col-lg-offset-4 {
     margin-left: 33.3333333333%;
   }
+
   .col-lg-offset-5 {
     margin-left: 41.6666666667%;
   }
+
   .col-lg-offset-6 {
     margin-left: 50%;
   }
+
   .col-lg-offset-7 {
     margin-left: 58.3333333333%;
   }
+
   .col-lg-offset-8 {
     margin-left: 66.6666666667%;
   }
+
   .col-lg-offset-9 {
     margin-left: 75%;
   }
+
   .col-lg-offset-10 {
     margin-left: 83.3333333333%;
   }
+
   .col-lg-offset-11 {
     margin-left: 91.6666666667%;
   }
+
   .col-lg-offset-12 {
     margin-left: 100%;
   }
@@ -1335,8 +1553,8 @@ body {
   z-index: 900;
   overflow-x: hidden;
   overflow-y: scroll;
-  -webkit-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
+  -webkit-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
   -moz-user-select: -moz-none;
   -webkit-user-select: none;
   -ms-user-select: none;
@@ -1418,7 +1636,7 @@ body {
   transition: background 0.3s;
 }
 .sidebar-toggle:before, .sidebar-toggle:after {
-  content: "";
+  content: '';
   position: absolute;
   left: 0;
   background: inherit;
@@ -1498,8 +1716,8 @@ body {
 
 .postWrapper,
 .sidebar-toggle-wrapper {
-  -webkit-transition: -webkit-transform 0.3s ease-in-out;
-  transition: transform 0.3s ease-in-out;
+  -webkit-transition: -webkit-transform .3s ease-in-out;
+  transition: transform .3s ease-in-out;
 }
 
 .sidebar-recentPosts {
@@ -1661,23 +1879,23 @@ body {
   transform: translateX(-50%);
   opacity: 0;
   -webkit-transition-property: opacity, left, top, width;
-  -webkit-transition-duration: 1s, 0.1s, 0.1s, 0.1s;
+  -webkit-transition-duration: 1s, .1s, .1s, .1s;
   -webkit-transition-timing-function: cubic-bezier(0.33, 0, 0.2, 1);
   -webkit-transition-delay: 0;
   -moz-transition-property: opacity, left, top, width;
-  -moz-transition-duration: 1s, 0.1s, 0.1s, 0.1s;
+  -moz-transition-duration: 1s, .1s, .1s, .1s;
   -moz-transition-timing-function: cubic-bezier(0.33, 0, 0.2, 1);
   -moz-transition-delay: 0;
   -ms-transition-property: opacity, left, top, width;
-  -ms-transition-duration: 1s, 0.1s, 0.1s, 0.1s;
+  -ms-transition-duration: 1s, .1s, .1s, .1s;
   -ms-transition-timing-function: cubic-bezier(0.33, 0, 0.2, 1);
   -ms-transition-delay: 0;
   -o-transition-property: opacity, left, top, width;
-  -o-transition-duration: 1s, 0.1s, 0.1s, 0.1s;
+  -o-transition-duration: 1s, .1s, .1s, .1s;
   -o-transition-timing-function: cubic-bezier(0.33, 0, 0.2, 1);
   -o-transition-delay: 0;
   transition-property: opacity, left, top, width;
-  transition-duration: 1s, 0.1s, 0.1s, 0.1s;
+  transition-duration: 1s, .1s, .1s, .1s;
   transition-timing-function: cubic-bezier(0.33, 0, 0.2, 1);
   -transition-delay: 0;
 }
@@ -1690,7 +1908,7 @@ body {
 }
 
 .section-gradient:before, .section-gradient:after {
-  content: "";
+  content: '';
   height: 100%;
   width: 100%;
   top: 0;
@@ -1781,7 +1999,7 @@ body {
   letter-spacing: 2px;
 }
 .postMeta li:after {
-  content: "";
+  content: '';
   display: inline-block;
   width: 4px;
   height: 4px;
@@ -1958,23 +2176,23 @@ body {
   background-position: center;
   padding-top: 100%;
   -webkit-transition-property: all, left, top, width;
-  -webkit-transition-duration: 0.5s, 0.1s, 0.1s, 0.1s;
+  -webkit-transition-duration: .5s, .1s, .1s, .1s;
   -webkit-transition-timing-function: cubic-bezier(0.33, 0, 0.2, 1);
   -webkit-transition-delay: 0;
   -moz-transition-property: all, left, top, width;
-  -moz-transition-duration: 0.5s, 0.1s, 0.1s, 0.1s;
+  -moz-transition-duration: .5s, .1s, .1s, .1s;
   -moz-transition-timing-function: cubic-bezier(0.33, 0, 0.2, 1);
   -moz-transition-delay: 0;
   -ms-transition-property: all, left, top, width;
-  -ms-transition-duration: 0.5s, 0.1s, 0.1s, 0.1s;
+  -ms-transition-duration: .5s, .1s, .1s, .1s;
   -ms-transition-timing-function: cubic-bezier(0.33, 0, 0.2, 1);
   -ms-transition-delay: 0;
   -o-transition-property: all, left, top, width;
-  -o-transition-duration: 0.5s, 0.1s, 0.1s, 0.1s;
+  -o-transition-duration: .5s, .1s, .1s, .1s;
   -o-transition-timing-function: cubic-bezier(0.33, 0, 0.2, 1);
   -o-transition-delay: 0;
   transition-property: all, left, top, width;
-  transition-duration: 0.5s, 0.1s, 0.1s, 0.1s;
+  transition-duration: .5s, .1s, .1s, .1s;
   transition-timing-function: cubic-bezier(0.33, 0, 0.2, 1);
 }
 @media (max-width: 767px) {
@@ -2257,7 +2475,7 @@ body {
   z-index: inherit;
 }
 .modal-toggle-close-wrapper .modal-toggle-close:before, .modal-toggle-close-wrapper .modal-toggle-close:after {
-  content: "";
+  content: '';
   position: absolute;
   left: 0;
   background: inherit;
@@ -2330,7 +2548,7 @@ body {
 .modal-toggle-bubble.active {
   -webkit-transform: scale(100);
   -webkit-transition: all 0.6s ease-out;
-  -webkit-transition-delay: 0.4s;
+  -webkit-transition-delay: .4s;
 }
 
 .modal-toggle-bubbleShadow {
@@ -2453,7 +2671,7 @@ body {
   background: transparent;
   border-radius: 99px;
   font-family: "Roboto", sans-serif;
-  letter-spacing: 0.02em;
+  letter-spacing: .02em;
   padding: 10px 40px 9px 40px;
   margin-top: 1.5rem;
   border: 2px solid rgba(119, 119, 119, 0.8);
@@ -2589,12 +2807,15 @@ body {
   .visible-xs {
     display: block !important;
   }
+
   table.visible-xs {
     display: table;
   }
+
   tr.visible-xs {
     display: table-row !important;
   }
+
   th.visible-xs,
   td.visible-xs {
     display: table-cell !important;
@@ -2622,12 +2843,15 @@ body {
   .visible-sm {
     display: block !important;
   }
+
   table.visible-sm {
     display: table;
   }
+
   tr.visible-sm {
     display: table-row !important;
   }
+
   th.visible-sm,
   td.visible-sm {
     display: table-cell !important;
@@ -2655,12 +2879,15 @@ body {
   .visible-md {
     display: block !important;
   }
+
   table.visible-md {
     display: table;
   }
+
   tr.visible-md {
     display: table-row !important;
   }
+
   th.visible-md,
   td.visible-md {
     display: table-cell !important;
@@ -2688,12 +2915,15 @@ body {
   .visible-lg {
     display: block !important;
   }
+
   table.visible-lg {
     display: table;
   }
+
   tr.visible-lg {
     display: table-row !important;
   }
+
   th.visible-lg,
   td.visible-lg {
     display: table-cell !important;
@@ -2745,12 +2975,15 @@ body {
   .visible-print {
     display: block !important;
   }
+
   table.visible-print {
     display: table;
   }
+
   tr.visible-print {
     display: table-row !important;
   }
+
   th.visible-print,
   td.visible-print {
     display: table-cell !important;
