--- a/_includes/figure.html
+++ b/_includes/figure.html
@@ -1,5 +1,5 @@
 {::nomarkdown}
-<figure>
+<figure style="margin: 0px;">
     <a href="{{ include.url | relative_url }}">
       <div class="img img--fullContainer img--{{include.height | default: 14}}xLeading"
         style="background-image: url({{ include.url | relative_url }}); background-size: contain;"></div>
