--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -35,8 +35,8 @@ layout: default
               {{ site.author.name }}
             </li>
             <li class="postMeta-tags">
-              {%if page.categories contains "Puzzles" %}<span>&#129513;</span>{% endif %}
-              {%if page.categories contains "WIP" %}<span>&#128679;</span>{% endif %}
+              <!-- {%if page.categories contains "Puzzles" %}<span>&#129513;</span>{% endif %}
+              {%if page.categories contains "WIP" %}<span>&#128679;</span>{% endif %} -->
               {{ page.categories }}
             </li>
           </ul>
