--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,11 +4,12 @@
       Hand crafted by <a href="/about/">Yaniv Leviathan</a>
     </div>
     <ul class="socialAccountList">
+      <li><a href="http://twitter.com/{{ site.author.twitter }}" class="socialAccount socialAccount--twitter" target="_blank"></a></li>
       <li><a href="http://facebook.com/{{ site.author.facebook }}" class="socialAccount socialAccount--facebook" target="_blank"></a></li>
       <li><a href="http://www.linkedin.com/in/{{ site.author.linkedin }}" class="socialAccount socialAccount--linkedin" target="_blank"></a></li>
     </ul>    
     <div>
-      © 2019 All Rights Reserved. Based on the awesome <a href="https://github.com/vincentchan/mickey" target="_blank">Mickey theme</a> for Jekyll.
+      © 2024 All Rights Reserved. Based on the awesome <a href="https://github.com/vincentchan/mickey" target="_blank">Mickey theme</a> for Jekyll.
     </div>
   </div>
 </footer>
