--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2588,7 +2588,7 @@ body {
   float: left;
   margin: 0;
   padding: 0 15px;
-  width: 100%;
+  width: 33.333%;
   height: 80px;
   background-repeat: no-repeat;
   background-position: center center;
@@ -2598,12 +2598,12 @@ body {
 .shareWrapper li .shareButton:hover {
   opacity: 1;
 }
-@media (min-width: 991px) and (max-width: 1200px) {
+/* @media (min-width: 991px) and (max-width: 1200px) {
   .shareWrapper li .shareButton {
     width: 100%;
     height: 60px;
   }
-}
+} */
 @media (max-width: 767px) {
   .shareWrapper li .shareButton {
     float: none;
