--- a/_includes/index.html
+++ b/_includes/index.html
@@ -60,9 +60,9 @@
                 }
               </style>
               {% if page_type != 'all' %}
-              <a class="subtitle_link" href="/">all</a> &middot; 
+              <a class="subtitle_link" href="/">everything</a> &middot; 
               {% else %}
-              <span>all</span> &middot; 
+              <span>everything</span> &middot; 
               {% endif %}
               {% if page_type != 'puzzles' %}
               <a class="subtitle_link" href="/puzzles.html">puzzles</a> &middot; 
