--- a/_includes/index.html
+++ b/_includes/index.html
@@ -74,6 +74,7 @@
               {% else %}
               <span>posts</span> &middot;
               {% endif %}
+              <a class="subtitle_link" href="/taotp.html">taotp</a> &middot;
               <a class="subtitle_link" href="/about/">about</a>
               <!-- a collection of puzzles, math, hacking, and general coolness -->
             </li>
