--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,6 +3,10 @@
     <div>
       Hand crafted by <a href="/about/">Yaniv Leviathan</a>
     </div>
+    <div style="margin-top: 10px;">
+      <tt>yaniv.leviathan.public at proton dot me</tt><br/>
+      <!-- <small>I'm getting a lot of mail, apologies in advance if I don't reply!</small> -->
+    </div>
     <ul class="socialAccountList">
       <li><a href="http://twitter.com/{{ site.author.twitter }}" class="socialAccount socialAccount--twitter" target="_blank"></a></li>
       <li><a href="http://facebook.com/{{ site.author.facebook }}" class="socialAccount socialAccount--facebook" target="_blank"></a></li>
